--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
