--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-kakao-maps-sdk": "^1.2.0",
